<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ancient_poems">
        <menu>
            <item
                android:id="@+id/ancient_poems_done"
                android:icon="@drawable/ic_done"
                android:title="@string/have_done" />
            <item
                android:id="@+id/ancient_poems_todo"
                android:icon="@drawable/ic_todo"
                android:title="@string/to_do" />
        </menu>
    </item>
    <item android:title="@string/classical_chinese">
        <menu>
            <item
                android:id="@+id/classical_chinese_done"
                android:icon="@drawable/ic_done"
                android:title="@string/have_done" />
            <item
                android:id="@+id/classical_chinese_todo"
                android:icon="@drawable/ic_todo"
                android:title="@string/to_do" />
        </menu>
    </item>
    <item android:title="@string/modern_chinese">
        <menu>
            <item
                android:id="@+id/modern_chinese_done"
                android:icon="@drawable/ic_done"
                android:title="@string/have_done" />
            <item
                android:id="@+id/modern_chinese_todo"
                android:icon="@drawable/ic_todo"
                android:title="@string/to_do" />
        </menu>
    </item>

</menu>
