<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".recite.ReciteActivity"
    tools:showIn="@layout/activity_recite">

    <Button
        android:id="@+id/button_have_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_have_done"
        android:text="@string/have_done"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_almost_done" />

    <Button
        android:id="@+id/button_almost_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_almost_done"
        android:text="@string/almost_done"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_have_done"
        app:layout_constraintRight_toLeftOf="@id/button_not_done" />

    <Button
        android:id="@+id/button_not_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_not_done"
        android:text="@string/not_done"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_almost_done"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="苟利国家生死以，\n□□□□□□□。"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/button_almost_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recite_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="——林则徐《赴戍登程口占示家人》"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

</android.support.constraint.ConstraintLayout>